src/test/asg1/errors/lexer-error.j
class Main {

Void main(){
    Int x;
    Int y;
    Bool b;
    x = 1 + 2 + 3;
    y = 100;
    b = x == y | y == x;
}

}